# cde_analyzer

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_full.md  LICENSE  README.md  VSCODE_SETUP.md  case_insensitive.patch  cde_analyzer.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cde_analyzer/: .editorconfig  .gitignore  1  CHANGELOG.md  CLAUDE.md  CLAUDE_full.md  LICENSE  MANIFEST.in  PACKAGING_QUICKSTART.md  __version__.py  cde_analyzer.py  cli.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
cde_analyzer/.claude/: TODO.md  notes.md
cde_analyzer/.claude/analysis/: cli-argument-audit.md  implementation-summary.md  packaging-plan.md  parallel-match-logging.md
cde_analyzer/.claude/context/: 01-architecture.md  02-codebase-map.md  03-data-models.md  04-patterns.md  05-decisions.md  06-dependencies.md  07-gotchas.md  08-progress.md  10-semantic-substitutor-brief.md  11-branching-strip-curation-run.md  11-scheuermann10-curation-run.md  README.md
cde_analyzer/CDE_Schema/: LLM_Classification.py  __init__.py
cde_analyzer/actions/: count.py  extract_embed.py  fix_underscores.py  lemma_fasta.py  phrase.py  phrase_builder.py  strip_phrases.py  subset.py
cde_analyzer/actions/batch_expand_abbreviations/: cli.py  run.py
cde_analyzer/actions/count/: cli.py  run.py
cde_analyzer/actions/diagnose_strip/: cli.py  run.py
cde_analyzer/actions/discovery_report/: __init__.py  cli.py  run.py
cde_analyzer/actions/extract_embed/: cli.py  run.py
cde_analyzer/actions/fix_underscores/: cli.py  run.py
cde_analyzer/actions/instrument_miner/: __init__.py  cli.py  run.py
cde_analyzer/actions/lemma_fasta/: cli.py  run.py
cde_analyzer/actions/llm_classify/: cli.py  run.py
cde_analyzer/actions/pattern_util/: cli.py  curation_diff.html  editor_config.py  run.py  tsv_editor.html
cde_analyzer/actions/phrase/: cli.py  run.py
cde_analyzer/actions/phrase_builder/: cli.py  run.py
cde_analyzer/actions/phrase_grouper/: __init__.py  cli.py  run.py
cde_analyzer/actions/phrase_miner/: cli.py  run.py
cde_analyzer/actions/pipeline_report/: __init__.py  cli.py  run.py
cde_analyzer/actions/recall_analyze/: cli.py  run.py
cde_analyzer/actions/strip_analyze/: cli.py
cde_analyzer/actions/strip_discover/: cli.py  run.py
cde_analyzer/actions/strip_html/: cli.py  run.py
cde_analyzer/actions/strip_phrases/: cli.py  run.py
cde_analyzer/actions/strip_report/: cli.py
cde_analyzer/actions/subset/: cli.py  run.py
cde_analyzer/actions/workflow/: __init__.py  cli.py  run.py
cde_analyzer/cde_analyzer/: __version__.py
cde_analyzer/config/: anchor_expansions.yaml  supplementary_patterns.yaml  temporal_seed_patterns.yaml  verbatim_strip_patterns.yaml
cde_analyzer/core/: __init__.py
cde_analyzer/data/: test_records.json
cde_analyzer/data/synthetic_qc/: synthetic_cdes.json  synthetic_manifest.tsv
cde_analyzer/docs/: about.md  architecture.md  contributing.md  curation-guide.md  data-models.md  extensions_v0.5.x.md  index.md  lessons_learned_20260129.md  overview.md  phrase_miner_logic.md  tsv-editor-cheatsheet.md  workflow-diagram.md
cde_analyzer/docs/appendix/: extensions_v0.5.x.md
cde_analyzer/docs/cheatsheets/: commands.html  concepts.html  index.md  pipeline.html
cde_analyzer/docs/commands/: index.md  phrase_miner.md
cde_analyzer/docs/help/: all-commands.md  batch_expand_abbreviations.md  cde_analyzer.md  diagnose_strip.md  discovery_report.md  extract_embed.md  fix_underscores.md  instrument_miner.md  lemma_fasta.md  llm_classify.md  pattern_util.md  phrase.md  phrase_builder.md  phrase_grouper.md  phrase_miner.md  pipeline_report.md  recall_analyze.md  strip_analyze.md  strip_discover.md  strip_phrases.md  subset.md  workflow.md
cde_analyzer/docs/llm/: configuration.md  index.md  llm_classify.md  query_modules.md
cde_analyzer/docs/vignettes/: distributed-curation.md  index.md  instrument-detection.md  parameter-tuning.md  phrase-stripping.md  pipeline-orchestration.md  quickstart.md  synthetic-data.md
cde_analyzer/docs/workflows/: instrument-detection-workflow.md  instrument-phrase-stripping-workflow.md
cde_analyzer/logic/: __init__.py  counter.py  curation_ledger.py  extract_embed.py  html_stripper.py  instrument_family_assigner.py  inter_rater.py  lemma_fasta.py  llm_classifier.py  phrase_anchor_extend.py  phrase_builder.py  phrase_family_analyzer.py  phrase_miner.py  phrase_stripper.py  rare_word_detector.py  remnant_detector.py  span_boundary.py  subset.py  verbatim_discoverer.py
cde_analyzer/scripts/: build_editor_zipapp.py  generate_health_drift.py  generate_synthetic_cdes.py  generate_synthetic_set1b.py  generate_synthetic_set2.py
cde_analyzer/tools/editor_standalone/: __main__.py
cde_analyzer/utils/: __init__.py  cde_impexport.py  cli_args.py  config_loader.py  constants.py  context_aware_masking.py  debruijn_graph.py  extract_embed.py  flexible_pattern_matcher.py  helpers.py  histogram_generator.py  html.py  instrument_extractor.py  instrument_family_patterns.py  kmer_build_longest_phrases.py  kmer_build_longest_phrases2.py  kmer_build_longest_phrases3.py  kmer_build_longest_phrases4.py  kmer_connect_extendedphrase.py  kmer_consolidated_phrases1.py  kmer_consolidated_phrases2.py  kmer_enrich_w_verbatim.py  kmer_extend_phrases1.py  kmer_extend_phrases2.py  kmer_extend_phrases3.py  lemma_fasta.py  path_utils.py  pattern_tsv_utils.py  pattern_variant_generator.py  phrase_builder.py  phrase_extraction.py  plot_kmer_counts.py  subsumption_filter.py  tinyid_utils.py  verbatim_template.py  verbatim_tracker.py
cde_analyzer/utils/legacy_kmer/: README.md  kmer_build_longest_phrases2.py  kmer_build_longest_phrases3.py  kmer_build_longest_phrases4.py  kmer_consolidated_phrases2.py  kmer_enrich_w_verbatim.py  (+2 more)
cde_analyzer/workflows/: abbreviation_expander.yaml  branching_strip.yaml  full_pipeline.yaml  instrument_detection.yaml  instrument_major_only.yaml  instrument_pipeline.yaml  phrase_family_stripping.yaml  phrase_pipeline.yaml  quick_strip.yaml  temporal_stripping.yaml
(+303 files in other folders)
