[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cde-analyzer"
version = "1.6.1"
description = "A Python framework for analyzing and extracting data from the NLM Common Data Elements Repository"
readme = "README.md"
# >=3.10 is forced by the hard cde-lib dependency (requires-python ">=3.10").
# Do NOT lower to 3.9: pip cannot resolve cde-lib on 3.9.
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gerard Tromp", email = "gerard.tromp@example.com"}
]
maintainers = [
    {name = "Gerard Tromp", email = "gerard.tromp@example.com"}
]
keywords = [
    "cde",
    "nlm",
    "nih",
    "common-data-elements",
    "data-analysis",
    "pydantic",
    "nlp",
    "phrase-extraction"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

# Constraint rationale lives in requirements.txt (kept in sync with this list).
# Policy: lower bounds = oldest version providing a used API / a security floor;
# upper caps ONLY for majors with known/expected breaks (pydantic 3, pandas 3,
# spacy 4). Speculative caps are omitted so consuming venvs are not constrained.
dependencies = [
    # v2 API only (model_validate/model_dump). Floor 2.0.0 (not 2.11); cap = v3.
    "pydantic>=2.0.0,<3.0.0",
    # CDE Pydantic schema now lives in cde_lib.schema (ADR-E004); the
    # CDE_Schema/ package is a thin re-export shim. Required (was optional).
    # Also raises the effective requires-python to >=3.10 (see above).
    "cde-lib>=0.2.0",
    # Cap required: en_core_web_sm models are locked to the spaCy minor series.
    "spacy>=3.7.0,<4.0.0",
    # Floor 3.9.0 is a SECURITY floor (CVE-2024-39705). No cap: 3.x is stable.
    "nltk>=3.9.0",
    # Cap (soft): pandas 3.0 changes defaults (copy-on-write, PyArrow strings).
    "pandas>=2.0.0,<3.0.0",
    # safe_load/safe_dump only; no <7 cap (no breaking PyYAML 7 on the horizon).
    "PyYAML>=6.0.0",
    # Floor justified by MarkupResemblesLocatorWarning import (>=4.11).
    "beautifulsoup4>=4.12.0",
    # bs4 parser backend only; lxml 6.x works, so no cap.
    "lxml>=4.9.0",
    # Console/Syntax only; rich 14.x works, so no cap.
    "rich>=13.0.0",
    # zipf_frequency only; no <4 cap (no wordfreq 4.0 exists).
    "wordfreq>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]
# Retained for backward compatibility only. cde-lib is now a *required*
# dependency (>=0.2.0, see [project].dependencies), so the browser-noise
# suppression it also provides is always available — installing this extra is
# now a no-op. Kept so existing `pip install cde-analyzer[quiet-browser]`
# invocations don't error.
quiet-browser = [
    "cde-lib>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/gtromp/cde-analyzer"
Documentation = "https://cde-analyzer.readthedocs.io"
Repository = "https://github.com/gtromp/cde-analyzer"
"Bug Tracker" = "https://github.com/gtromp/cde-analyzer/issues"

[project.scripts]
cde-analyzer = "cli:main"

[tool.setuptools]
# Use flat layout - packages are at the root level, not nested under cde_analyzer
py-modules = ["cde_analyzer", "cli"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "actions*",
    "logic*",
    "utils*",
    "core*",
    "CDE_Schema*",
]
exclude = [
    "tests*",
    "docs*",
    ".claude*",
    "scripts*",
]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.json", "*.md"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude legacy kmer files
  | utils/kmer_.*\.py
  | utils/plot_kmer_counts\.py
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    # Exclude legacy files
    "utils/kmer_*.py",
    "utils/plot_kmer_counts.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "spacy.*",
    "pandas.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["actions", "logic", "utils", "core", "CDE_Schema", "cde_analyzer.py", "cli.py"]
omit = [
    "*/tests/*",
    "*/utils/kmer_*.py",
    "*/utils/plot_kmer_counts.py",
    "*/utils/legacy_kmer/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
